Fixed top middle clipping

--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,10 @@ html, body {
     flex: 1;
 }
 
-
-
 #leftArea {
     background-color: #00468b;
     padding: 2vw;
     position: relative;
-    overflow: hidden;
     text-align: center;
 }
 
@@ -36,6 +33,7 @@ html, body {
 
 #upperCenter {
     height: 10vh;
+    min-height: 75px;
     background-color: darkcyan;
     display: flex;
     flex-direction: row;
@@ -58,7 +56,6 @@ html, body {
 
 #newsDiv {
     flex: 4;
-    display: block;
     text-align: center;
 }
 
